--- a/source/_posts/2016-01-06-Hexo搭建个人博客（四）.md
+++ b/source/_posts/2016-01-06-Hexo搭建个人博客（四）.md
@@ -8,7 +8,7 @@ description: 本文详细介绍如何博客进行细节性优化。
 ---
 ![](http://7xj5r6.com1.z0.glb.clouddn.com/hexo.png)
 
-本文详细介绍如何博客进行细节性优化。
+本文详细介绍如何博客进行细节性优化！
 <!-- more -->
 
 ## 主页背景图
