--- a/source/_posts/2016-01-06-Hexo搭建个人博客（四）.md
+++ b/source/_posts/2016-01-06-Hexo搭建个人博客（四）.md
@@ -244,9 +244,6 @@ categories: Hexo
 tags: [Hexo, 博客]
 description: 本文详细介绍如何博客进行细节性优化。
 ```
-
-## 文章搜索
-
 ## 域名申请+绑定
 域名申请可以到[godaddy](https://www.godaddy.com)上申请，网上有许多优惠码可以拿来用。
 申请成功后在DOMAIN下配置域名。下面主要讲解下如何使用[DNSPOD](https://www.dnspod.cn/)进行域名解析。
@@ -271,4 +268,74 @@ F1G1NS2.DNSPOD.NET
 [4] 在博客source目录下新建文件CNAME，内容为你的域名地址。
 注：CNAME文件名一定要全大写，域名地址不要带www或者http
 godaddy绑定域名并完成解析大概需要24小时，经过以上步骤就可以通过域名直接访问你的博客了。
---- 未完待续 ---
+
+## 博客管理
+为了便于在不同的电脑上写博客，需要对博客内容进行同步，我们使用github分支来解决这个问题。
+- 新建分支，推送源码
+
+目前我的博客发布后的内容（html）在xuyuri.github.io仓库下的master分支下，首先在xuyuri.github.io下新建一个分支hexo，然后将xuyuri.github.io的默认分支切换到hexo，再进行如下操作流程：
+[1] PC下新建一个目录用于存放博客内容，假设为Blog，Git Bash Here 定位到Blog目录
+[2] 使用` git clone git@github.com:xuyuri/xuyuri.github.io.git` 拉取分支，此时会生成一个xuyuri.github.io.目录，进入到该目录，此时git显示当前分支为hexo，即默认分支；
+[3] 清空hexo目录
+```
+rm -rf *
+git add .
+git commit -m 'init'
+git push origin hexo
+```
+此步骤会清空hexo分支下原有发布的html博客数据，将博客源码数据拷贝至Blog/xuyuri.github.io目录下，执行：
+```
+git add .
+git commit -m 'init'
+git push origin hexo
+```
+此时会将本地博客源码推送至hexo目录下。
+注意：博客源码中博客主配置文件_config.yml中的deploy参数，部署的分支应为master，以后在hexo分支下写博客，hexo d部署到master分支下。
+
+- 日常博客维护
+
+日常新建博客，修改博客都在hexo分支下进行，通过：
+```
+git add .
+git commit -m 'XXX'
+git push origin hexo
+```
+命令将修改内容推送至hexo分支，然后使用：
+```
+hexo g
+hexo d
+```
+将修改内容发布到master分支，此时通过域名访问博客可以看到修改后的内容。
+
+- 在其他电脑上使用
+
+[1] 拉取分支：`git clone git@github.com:xuyuri/xuyuri.github.io.git`（默认为hexo）
+[2] 配置环境：
+```
+npm install hexo
+npm install
+npm install hexo-deployer-git --save
+```
+注意：一定不要使用hexo init指令！
+安装完成后就可以进行博客的修改、新建。
+如果在不同电脑上同时有博客的源码目录，每次写/修改博客前要先从分支上拉取最新的代码，然后再在本地目录下进行操作。
+```
+git status
+git pull
+```
+先使用`git status` 查看本地目录的状态，如果有未提交的修改，要先提交，保证本地目录干净；
+再使用`git pull`从hexo分支中拉取最新的代码，此时就可以正常写博客了。
+
+## 写在最后
+至此关于如何使用Hexo搭建个人博客就介绍到这里，最后附上在搭建个人博客中参考的博客/文献，一并致谢！
+
+[1] [hexo系列教程](http://www.zipperary.com/categories/hexo/)
+[2] [hexo你的博客](http://ibruce.info/2013/11/22/hexo-your-blog/)
+[3] [Hexo Landscape 主题修改优化](http://www.devchen.com/blog/coding/HTML/hexo-theme/)
+[4] [GitHub Pages + Hexo搭建博客](http://crazymilk.github.io/2015/12/28/GitHub-Pages-Hexo搭建博客/)
+[5] [【Hexo+Github】域名和github绑定的问题](http://www.jianshu.com/p/1d427e888dda)
+[6] [Hexo 部署到 Github Pages 文件夹大小写问题](http://1mhz.me/2015/hexo-deploy-case-sensitive/)
+[7] [Hexo入门指南（七）-评论&分享](http://blog.csdn.net/wizardforcel/article/details/40707993)
+[8] [hexo 添加百度统计](http://blog.justforfun.top/2015/02/06/hexo-添加百度统计/)
+
+--- 完结 ---
