--- a/source/_posts/2016-01-15-Python文件处理（一）读写文件.md
+++ b/source/_posts/2016-01-15-Python文件处理（一）读写文件.md
@@ -121,16 +121,156 @@ os.path.basename(path)
 ```
 os.path.dirname(path)
 ```
-
-
-## 乱码
-
 ## 实战
-生成一个array配置文件
+**目标：**读取文档weixin.txt，添加适当内容后写入文档result.txt。
+weixin.txt文档部分内容如下：
+```
+-1	系统繁忙
+0	请求成功
+40001	获取access_token时Secret错误，或者access_token无效
+40002	不合法的凭证类型
+40003	不合法的UserID
+40004	不合法的媒体文件类型
+40005	不合法的文件类型
+40006	不合法的文件大小
+40007	不合法的媒体文件id
+40008	不合法的消息类型
+40013	不合法的corpid
+40014	不合法的access_token
+40015	不合法的菜单类型
+40016	不合法的按钮个数
+40017	不合法的按钮类型
+40018	不合法的按钮名字长度
+40019	不合法的按钮KEY长度
+40020	不合法的按钮URL长度
+40021	不合法的菜单版本号
+...
+```
+- 读文件
+```python
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+'''
+Created on 2016/1/12
+@filename: main.py
+@author: yurixu
+@des: Python读写文件
+'''
+f = open('weixin.txt', 'r')
 
-Python文件处理（二）读写Excel文件
-Python文件处理（三）读写CSV文件
-Python正则表达式
-Python爬虫之网页抓取
-Python爬虫之多线程抓取
-————未完待续————
+def main():
+	#python 按行读取文件
+	for i in f:
+		print i
+	
+if __name__=="__main__":
+	main()
+	f.close() 
+```
+输出的文件内容为乱码：
+```
+43010   闇€瑕佸浜庡洖璋冩ā寮?
+
+43011   闇€瑕佷紒涓氭巿鏉?
+
+43013   搴旂敤瀵规垚鍛樹笉鍙
+
+44001   澶氬獟浣撴枃浠朵负绌?
+
+44002   POST鐨勬暟鎹寘涓虹┖
+
+44003   鍥炬枃娑堟伅鍐呭涓虹┖
+
+44004   鏂囨湰娑堟伅鍐呭涓虹┖
+```
+乱码原因：源文件weixin.txt编码格式为UTF-8，Windows本地默认编码格式为GBK，所以直接在控制台打印输出字符串就会产生乱码。
+解决方法：
+```python
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+'''
+Created on 2016/1/12
+@filename: main.py
+@author: yurixu
+@des: Python读写文件
+'''
+import sys
+
+#获取当前系统编码
+type = sys.getfilesystemencoding()
+f = open('weixin.txt', 'r')
+
+def main():
+	#python 按行读取文件
+	for i in f:
+		print i.decode("UTF-8").encode(type)
+	
+if __name__=="__main__":
+	main()
+	f.close() 
+```
+输出：
+```
+43006   需要订阅
+
+43007   需要授权
+
+43008   需要支付授权
+
+43010   需要处于回调模式
+
+43011   需要企业授权
+
+43013   应用对成员不可见
+```
+- 写文件
+```python
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+'''
+Created on 2016/1/12
+@filename: main.py
+@author: yurixu
+@des: Python读写文件
+'''
+import sys
+
+type = sys.getfilesystemencoding()
+f = open('weixin.txt', 'r')
+w = open('result.txt', 'w')
+
+def main():
+	#python 按行读取文件
+	for i in f:
+		a = i.decode("UTF-8").encode(type)
+		#python 分割字符串
+		b = a.split()
+		#python 拼接字符串
+		w.write("'"+b[0]+"'"+" => "+"'"+b[1]+"',")
+		w.write('\n')
+	
+if __name__=="__main__":
+	main()
+	f.close() 
+	w.close()
+```
+weixin.txt每行包含两列内容：errCode和errMsg，写入文件前需要对两列分别处理，所以需要使用split方法进行字符串分割，生成元组b，再对元组各元素进行字符拼接。由于write方法不自动添加换行符，所以在每行结尾要手动添加换行符\n，在main结束后关闭文件。
+最终写入的文件内容：
+```
+'?-1' => '系统繁忙',
+'0' => '请求成功',
+'40001' => '获取access_token时Secret错误，或者access_token无效',
+'40002' => '不合法的凭证类型',
+'40003' => '不合法的UserID',
+'40004' => '不合法的媒体文件类型',
+'40005' => '不合法的文件类型',
+'40006' => '不合法的文件大小',
+'40007' => '不合法的媒体文件id',
+'40008' => '不合法的消息类型',
+'40013' => '不合法的corpid',
+...
+```
+生成的result.txt可以直接拿来添加array头尾，放置到Yii配置文件中使用。
+Python简单读写文件就介绍到这里，关于Python如何读写Excel文件，我将在[Python文件处理（二）读写Excel文件]()中介绍。
+
+---- 完结 ----
