--- a/source/_posts/2016-01-15-Python文件处理（一）读写文件.md
+++ b/source/_posts/2016-01-15-Python文件处理（一）读写文件.md
@@ -271,6 +271,6 @@ weixin.txt每行包含两列内容：errCode和errMsg，写入文件前需要对
 ...
 ```
 生成的result.txt可以直接拿来添加array头尾，放置到Yii配置文件中使用。
-Python简单读写文件就介绍到这里，关于Python如何读写Excel文件，我将在[Python文件处理（二）读写Excel文件]()中介绍。
+Python简单读写文件就介绍到这里，关于Python如何读写Excel文件，我将在[Python文件处理（二）读写Excel文件](http://yurixu.com/blog/2016/01/19/Python文件处理（二）读写Excel文件/)中介绍。
 
 ---- 完结 ----
