--- a/source/_posts/2016-01-05-Hexo搭建个人博客（三）.md
+++ b/source/_posts/2016-01-05-Hexo搭建个人博客（三）.md
@@ -187,7 +187,7 @@ baidu_tongji: true 			#百度统计
 [3] [失蹤兒童少年資料管理中心404](http://404page.missingkids.org.tw/)
 
 ## 图床
-图床我使用的是七牛云存储，速度还不错。可以将首页背景图片放置到七牛上，获取存储地址，找到themes\landscape\source\css\_variables.sty第39行：
+图床我使用的是七牛云存储，速度还不错。可以将首页背景图片放置到七牛上，获取存储地址，找到themes\landscape\source\css\\_variables.sty第39行：
 ```php
 banner-url = "images/banner.jpg"
 ```
