--- a/source/_posts/2016-02-17-2016年读书计划.md
+++ b/source/_posts/2016-02-17-2016年读书计划.md
@@ -6,4 +6,34 @@ tags: Read
 description: 2016年读书计划
 ---
 ![](http://7xj5r6.com1.z0.glb.clouddn.com/reading.jpg)
-<table border="1" cellpadding="1" cellspacing="0">   <tr>      <th colspan="3">2015年学习计划</th>         </tr>   <tr>      <td>内容</td>      <td>月份</td>      <td>计划内容</td>   </tr>   <tr>      <td rowspan="2">服务器端</td>      <td>2015年7月</td>      <td>PHP圣经+知识方法</td>   </tr>   <tr>            <td>2015年8月</td>      <td>PHP高级</td>   </tr>   <tr>      <td rowspan="2">数据存储</td>      <td>2015年9月</td>      <td>Mysql初级</td>   </tr>   <tr>           <td>2015年10月</td>      <td>Mysql高级</td>   </tr>   </table>
+
+<table class="table table-bordered table-striped table-condensed">
+   <tr>
+      <th colspan="3">高性能MySQL</th>
+   </tr>   
+   <tr>
+      <td rowspan="6">![](images/404.png)</td>
+      <td>作者</td>
+      <td>XXX</td>
+   </tr>
+   <tr>
+      <td>语言</td>
+      <td>XXX</td>
+   </tr>
+   <tr>
+      <td>页数</td>
+      <td>XXX</td>
+   </tr>
+   <tr>
+      <td>链接</td>
+      <td>XXX</td>
+   </tr>
+   <tr>
+      <td>状态</td>
+      <td>XXX</td>
+   </tr>
+   <tr>
+      <td>书评</td>
+      <td>XXX</td>
+   </tr>
+</table>
