--- a/source/_posts/2016-02-17-2016年读书计划.md
+++ b/source/_posts/2016-02-17-2016年读书计划.md
@@ -12,7 +12,7 @@ description: 2016年读书计划
       <th colspan="3">高性能MySQL</th>
    </tr>   
    <tr>
-      <td rowspan="6">![](images/404.png)</td>
+      <td rowspan="6">![](/img/404.png)</td>
       <td>作者</td>
       <td>XXX</td>
    </tr>
