--- a/source/_posts/2016-02-23-《如何高效的读懂一本书》读书笔记.md
+++ b/source/_posts/2016-02-23-《如何高效的读懂一本书》读书笔记.md
@@ -35,5 +35,18 @@ tags: 阅读
 ## 读书方法
 - 通读法：
 如何培养一个领域的知识框架呢？答：反复读几本关于该领域的相对结构化、体系化的入门经典书籍，反复读，读透了，自然就形成了最基本的知识框架。
-- 
+- 树读法
+适用于主题阅读。主题阅读是指先圈定一个感兴趣的领域，然后搜集这个领域可以找到的图书、论文、网文进行阅读。自己先梳理一个大纲，然后选一本经典的书阅读，对照大纲梳理充实，再阅读其他的图书对大纲内容进行完善补充。该方法可以在短时间内深入研究一个领域。
+- 图读法
+适用于啃硬书。硬书是指口碑好、内容多、思想含金量高的书，但是要读懂原著或译注比较困难。可以利用思维导图将书中每一段、每一节、每一章的中心思想概括出来，然后拼接形成大纲。
+- 框读法
+适用于读有一定难度的书。尝试用自己学到的思考框架去理解作者的逻辑，然后写书评。
+- 炼读法
+使用于读畅销书。读书要先消化（充分理解书中的理论与内容），再内化（转化为自己内在的知识），然后输出（写书评、做分享、做读书PPT），读完一本书没有输出，那么这本书只能算看过。炼读就是将作者的逻辑从书中提炼出来，变成自己能够说清楚的核心观点。
+- 逆读法
+适用于观点很有名但其实有偏颇的书。列出你认为书中错误或者在现实中不适用的观点，说出理由进行反驳。
+- 抄读法
+适用于读“大牛”的书，即摘录。
+- 闲读法
+适用于读快餐书
 
