--- a/source/_posts/2016-02-23-《如何高效的读懂一本书》读书笔记.md
+++ b/source/_posts/2016-02-23-《如何高效的读懂一本书》读书笔记.md
@@ -11,11 +11,11 @@ tags: 阅读
 昨天无意中在一个公共号发现了一则文章，写的是作者通读《如何高效的读懂一本书》后的心得体会，实则为读书笔记，读后感觉受益匪浅，于是找来秋叶的这本《如何高效的读懂一本书》进行细读。
 <!-- more -->
 ## 怎样读书
-- 读书的第一个误区就是“怎样才算读完一本书？”
-读完一本书并不是指一字不漏的将整本书看完，不同类型的书籍有不同的读书方法；也不要一味地攀比读书的数量，应该读不同种类的书；学会用批判性的思维去读书，而不是一味的接收书中的观点和理论。
-- 哪里有时间去读书
+- **读书的第一个误区就是“怎样才算读完一本书？”**
+读完一本书并不是指一字不漏的将整本书看完，不同类型的书籍有不同的读书方法；也不要一味地攀比读书的数量，应该读不同种类的书；学会用批判性的思维去读书，而不是一味的接受书中的观点和理论。
+- **哪里有时间去读书**
 请问你哪里有时间去逛淘宝、打游戏、刷朋友圈？一样的道理，做你喜欢做的事情，你自然愿意付出足够多的时间，不要太刻意去安排读书的时间，而是随时读书。
-- 如何选择书
+- **如何选择书**
 读书的类型要丰富，而不是仅仅追求读得多，应该合理搭配四类书：
 工具书：遇到不懂的随手翻；
 专业书：专业技巧作为安身立命之本，不可或缺；
@@ -23,30 +23,203 @@ tags: 阅读
 潮流书：要与时俱进，读一些新书。
 而且在不同的成长阶段对书的选择也要有侧重点。
 好书要精读，什么都懂点不如先读懂一门。一个人的知识体系好比是金字塔，要先有一个知识框架，底座是涉猎的知识领域，涉猎越广泛，底座越牢固就能叠的越高，从而才能在顶层积累自己的专长。
-- 读书的境界
+- **读书的境界**
 第一层境界：看懂别人的道理；
 第二层境界：自己能够照着讲出来；
 第三层境界：自己有意识去运用别人的道理；
 第四层境界：能用自己的话总结出来。
 其实就是将别人的知识通过运用转化成自己知识的过程。
-- 如何读书
+- **如何读书**
 读书要学会建立系统性思维，形成知识框架体系。目前微信、微博有各种碎片化的知识，如果自己没有一套知识框架，这些碎片知识很快就会忘却，而不会转化成你自己的知识，而系统的读书则不同，它是系统的知识性体系，有助于你建立知识框架，所以还是建议先通过读书培养出框架思维能力再看碎片文章。
 
 ## 读书方法
-- 通读法：
+- **通读法**
 如何培养一个领域的知识框架呢？答：反复读几本关于该领域的相对结构化、体系化的入门经典书籍，反复读，读透了，自然就形成了最基本的知识框架。
-- 树读法
+- **树读法**
 适用于主题阅读。主题阅读是指先圈定一个感兴趣的领域，然后搜集这个领域可以找到的图书、论文、网文进行阅读。自己先梳理一个大纲，然后选一本经典的书阅读，对照大纲梳理充实，再阅读其他的图书对大纲内容进行完善补充。该方法可以在短时间内深入研究一个领域。
-- 图读法
+- **图读法**
 适用于啃硬书。硬书是指口碑好、内容多、思想含金量高的书，但是要读懂原著或译注比较困难。可以利用思维导图将书中每一段、每一节、每一章的中心思想概括出来，然后拼接形成大纲。
-- 框读法
+- **框读法**
 适用于读有一定难度的书。尝试用自己学到的思考框架去理解作者的逻辑，然后写书评。
-- 炼读法
+- **炼读法**
 使用于读畅销书。读书要先消化（充分理解书中的理论与内容），再内化（转化为自己内在的知识），然后输出（写书评、做分享、做读书PPT），读完一本书没有输出，那么这本书只能算看过。炼读就是将作者的逻辑从书中提炼出来，变成自己能够说清楚的核心观点。
-- 逆读法
+- **逆读法**
 适用于观点很有名但其实有偏颇的书。列出你认为书中错误或者在现实中不适用的观点，说出理由进行反驳。
-- 抄读法
+- **抄读法**
 适用于读“大牛”的书，即摘录。
-- 闲读法
+- **闲读法**
 适用于读快餐书
 
+## 读书的步骤
+1. 看作者简介、摘要和目录，快速了解一本书的框架，越了解作者的经历背景越有助于深入思考这本书的观点；
+2. 快速通读一遍；
+3. 看到启发性或者精彩的单元，立刻做记录；
+4. 对有感觉的书，记录了足够的素材才考虑写读书笔记。
+
+## 如何写读书笔记
+1. 摘录精华，对特别有感触的内容加一句话点评；
+2. 针对书的内容、价值写书评；
+3. 写读书心得笔记；
+4. 做一个读书笔记PPT；
+5. 模仿作者的思维写类似文章或推导其他的现象；
+6. 心得分享。
+
+## 长尾理论
+- **含义**
+过去由于成本和效率的因素限制，消费者不可能接触到全部的商品。但是在互联网上，商品储存流通展示的场地和渠道足够宽广，而且数字化商品生产成本急剧下降，以至于个人都可以进行生产，并且商品的销售成本急剧降低，那么几乎任何以前看似需求极低的产品，只要有卖的，就会有人买。这些需求和销量不高的产品所占据的共同市场份额，可以和主流产品的市场份额相当，甚至更大。
+长尾理论要在商业上成立需要满足非常严格的条件：
+1. 所有的商品必须是基于互联网支付的数字化产品，没有线下的存储、配送、消费需求；
+2. 所有的商品品类必须是足够多的，而且是有个性的商品；
+3. 所有的商品都必须通过一个渠道进行销售，而不是分散在无数个小平台里面。
+
+## 免费商业模式
+安德森归纳出四种基于核心服务的免费商业模式：
+- **直接交叉补贴**
+例如电信运营商的存话费送手机；
+- **三方市场**
+广告商付费，消费者免费；
+- **免费加收费**
+部分用户免费，另一部分用户收费，例如QQ会员和普通用户；
+- 纯免费
+例如维基百科，由热心人捐赠运营费用。
+
+免费商业模式有巨大的门槛：
+- **规模**
+免费模式如果要做到交叉补贴，就需要有足够的用户规模；
+- **原创**
+免费服务不等于低质量的服务，还要提供比过去付费更好的服务；
+- **资金**
+前期推广需要大量的资金；
+- **产品**
+在中国要做免费商业模式，一定要在不断吸引足够注意力的基础上推出定制的标准化商品。
+
+## 六度空间理论
+**含义**
+最多通过六个人你就能够认识世界上的任何一个陌生人。
+**心得**
+1. 认识100个人不如得到一个有影响力的人认可；
+2. 重点不是你认识多少人，而是你认识哪些人；
+3. 要和有能量的人建立长期良好的关系，根本方法是提升自己的价值。
+
+## 参与感营销
+如果一个产品能够形成一个论坛进行交流讨论，那么这个产品就可能具有培养参与感粉丝的机会。
+“专注、极致、口碑、快”对于职场人实现升职加薪同样具有借鉴意义。
+
+## 紧急重要程度模型
+![紧急重要程度模型](/img/如何高效的读懂一本书/紧急重要程度模型.png)
+- 写下明天/未来一周/未来一个月/未来一年的主要事情清单，并按照紧急重要程度模型归类，想好应对策略并落实到工作计划中。
+- 你对未来设想越细致，你就越可能过上你预想的生活，还要付诸于行动。
+
+## 波士顿矩阵分析法
+![波士顿矩阵分析法](/img/如何高效的读懂一本书/波士顿矩阵分析法.png)
+决定产品价值的基本因素有两个：市场份额和市场增长潜力，依据这两个维度，波士顿矩阵将企业的产品分为四种：
+- **金牛产品**
+市场占有率高，但是增长缓慢的产品；
+- **明星产品**
+正在快速占领市场的产品，要努力让明星产品成为金牛产品；
+- **问号产品**
+看起来具有较高吃成长潜力，但是市场接纳度低的产品；
+- **瘦狗产品**
+市场增长率和市场占有率“双低”的产品。
+企业要促使四类产品之间形成良性转化的关系，即“销售一代，储备一代，研发一代，规划一代”的产品规划战略。
+
+## 后果模型
+- 一个人对一件事情了解的信息越充分，就越容易做出快速决策；
+- 一个人对同类事情实践得越多，就越容易做出快速决策；
+- 一个人对事情做决策的习惯是勇于承担后果，就越容易做出快速决策。
+** 不要因为害怕遇到糟糕的后果而不做决定，也不要指望做出一个好的决定事情就会自动变好，你需要不断努力，让你一开始正确的决定真正得以实现。**
+
+## 技术周期循环模型
+如果一个人的职业规划总是依赖几种固有的能力，我相信在一个充满变动的时代，他会错失一些机会。所以要尝试不同的领域，多一些其他的技能，正所谓技多不压身。
+
+## 马洛斯需求模型
+人类的需求分为五种：
+- **生理上的需求**：吃饭、睡觉、温暖、性；
+- **安全上的需求**：有属于自己的地方住、有工作保障、身体健康、不受坏人的侵犯；
+- **情感上的需求**：朋友、爱人、亲人；
+- **尊重上的需求**：有社会地位、权力、金钱；
+- **自我实现的需求**：个人的独特性、个人潜能、追求卓越。
+前三种是最基本需求，如果这三种需求得不到满足的话，人们就不会考虑其他的需求。
+
+## 肯定式探询模型
+- 肯定式探询（Appreciative Inquiry）模型希望人们在沟通时把焦点放在个人本身的长处、正面的特质和潜力上，而不是弱点上。
+- 建议用“目前什么进行得很顺利”取代“有什么问题”的提问，他认为如果在会议时一味专注于弱点，会一开始就营造出负面印象。
+- 提出批评很容易，一个普通员工都能看出一堆问题，但是提出改进的建议才是真本事。而肯定式探询鼓励人们去研究、讨论并建立有效用的沟通方式，而不只是提出批评。
+- 若想集聚和保存变革力量，一种积极的影响力和社会亲密感是非常重要的，如希望、振奋、鼓舞、关怀、友谊、工作的紧迫感，以及完成任务后的愉悦感。
+
+## 训练快速决断力
+- **第一步：把你的想法写下了**
+- **第二步：尝试用准确的语言表达自己的想法**
+一个人只有能用准确的语言表达自己的想法，才能深刻理解自己的想法，理解别人语言里面的正确意思，而不是停留在表面。
+- **第三步：避免浮浅的交流**
+
+## 黑天鹅效应
+“黑天鹅”指极不可能发生，实际上却又真的发生了的事件。
+虽然未来不可预知，但我们总可以努力提高自己的能力，使得自己能在不可预知的事件降临时，更好、更快地适应它。
+
+## 六顶思考帽
+每一个颜色分别代表不同的特点：
+- **白帽**：理性的、客观的思维，重点在于事实和可行性。
+- **红帽**：情绪的思维，主观的感受和意见。
+- **黑帽**：质疑的思维，评估风险，找出问题。
+- **黄帽**：乐观的思维，相信有最好的局面。
+- **绿帽**：创意的思维，新的点子、建设性意见。
+- **蓝帽**：结构化的思维，纵览全局，提出整体意见。
+在一个团队内部，最大的危机就在于老大喜欢找和自己意气相投的人，好处是容易达成一致，风险是容易集体选择性失明。
+
+## 会议记录
+职场里做好会议记录只需要三点就够了：
+- **要清楚记录会议的结论**
+- **要清楚记录得出结论之前的讨论要点**
+- **要清楚记录会议的“下一步安排或建议**
+
+## MORS法则
+带人要具体告知下属应该采取的行动，而且必须用可感知的语言提出要求。
+MORS法则：
+- **可测量（Measurable）**——可计算或写成数据；
+- **可观察（Observable）**——无论是谁都能知道结果应该如何；
+- **可信赖（Reliable）**——无论是谁都能够辨识行为是否一致；
+- **明确的（Specific）**——如字面含义，一清二楚无歧义。
+对于新人，工作要求越具体明确，越细分到简单好懂的层面，他们上手越容易，这样做是非常有价值的。对于流程型规范的工作，也应当如此。
+
+## 周鸿祎的互联网思维
+**第一**，先做用户再做客户，这是互联网时代的商业模式。
+**第二**，没有一定规模效应的用户，是没有付费客户的，这是互联网时代的赚钱模式。
+**第三**，要吸引海量用户，杀器之一是免费服务，杀器之二是极致产品体验，这是互联网时代的推广模式
+一个好的产品应该让对这个事情不怎么懂的用户都能上手，这才是成功。这一点我非常赞同，用户使用成本越低，产品推广越容易成功。
+
+## 怎样的老大才靠谱
+- **第一有信用**，给小伙伴的承诺一定要兑现。
+- **第二有远见**，能看到小伙伴看不见的东西。
+- **第三有决断**，想清楚的事情能够马上执行。
+- **第四有原则**，能坚持自己说的核心价值观。
+
+## 四步读书法
+四步读书法主要用来读企业家的演讲集。
+- **第一步：通读全文**
+- **第二步：标注金句**
+- **第三步：分类归纳**
+- **第四步：点评感悟**
+
+## 碎片化时间
+- 有些工作的确需要大块的时间，但如果不是提前做够铺垫，这些大块的时间并不会有效果。
+- 认真思考你认为需要大块时间完成的工作，看看能否分解成可利用碎片化时间完成的工作。
+- 学会给每一种碎片化时间单位寻求多元化用途。
+- 我的建议是动手做一张表格：把你碎片化时间的用途和你生活中的情景关联起来。
+- 碎片化时间用途越多，你的时间支配自由度就越高，你就越能在自由组合时间碎片完成不同的工作。
+- 与其养成依赖大块时间才能做大工作的习惯，还不如提前训练职场真正需要的碎片化时间利用能力。当然我并不是说有些工作不需要大块的时间，而是利用好碎片化时间，可以大大节约大块时间，或者提高大块时间的利用效率。
+
+## 时间统计法
+- 只有拥有伟大的目标的人，才能真正感受到浪费时间的可耻。
+- 所以我的体会是，只要学会充分休息，保持规律的生活习惯，你可以让自己的自律性得到完美的延伸。
+- 一个人放弃了自己，往往是从生活上失去了自律性开始的。所以我常常建议大家保持有规律的生活，其实是一种保持精神状态的诀窍。
+- 所有伟大的目标，必须分解成为一系列可以看到的步骤，你每天推进一点点，就会离目标近一点点，这种不断推进的感觉会让你更好地坚持你的目标。
+- 基本上每天的重要工作，我会提前在笔记本上手记，这个本子一年一本，已经坚持很多年了。
+
+## 如何应对紧张的工作节奏
+- 越是紧张的工作，越是压力大，越需要工作之外的活动来排解压力，让自己获得能量继续投入工作。
+普通人对待时间管理的一个误区反而是，越是觉得压力大，越把时间全部用于对付压力；越是把时间全部用来对付压力，越是觉得生活了无乐趣；越是觉得生活了无乐趣，越对压力索然寡味无力挑战；越是无力挑战越是整个人身心疲惫，效率低下。
+而真正的高手一定懂得劳逸结合的道理，越是压力大，越要忙里偷闲安排别的事情。第一，可以放松大脑，不要让大脑总是陷入一种思维模式，就是放松大脑的手段；第二，在别的事情中得到放松了，工作起来面对压力也有动力，没有动力的压力只是压力，直到把你拖垮，有了动力，压力可以被我们慢慢克服，变成成就感；第三，大脑在转换思维模式的过程中，往往能启发出新的灵感，让你的工作变得更加有创意，更加有效果。
+- 压力往往是因为你坚持了很久，却没有进展造成的。所以我每次都会设定一个小阶段目标，看到目标被我拿下，压力就变成了一定要一鼓作气拿下的决心了。
+
+## 本书收获
