--- a/source/_posts/2016-02-23-《如何高效的读懂一本书》读书笔记.md
+++ b/source/_posts/2016-02-23-《如何高效的读懂一本书》读书笔记.md
@@ -8,7 +8,7 @@ tags: 阅读
 ![](http://7xr2qq.com1.z0.glb.clouddn.com/%E5%A6%82%E4%BD%95%E9%AB%98%E6%95%88%E7%9A%84%E8%AF%BB%E6%87%82%E4%B8%80%E6%9C%AC%E4%B9%A6.jpg)
 ## 序言
 
-昨天无意中在一个公共号发现了一则文章，写的是作者通读《如何高效的读懂一本书》后的心得体会，实则为读书笔记，读后感觉受益匪浅，于是找来秋叶的这本《如何高效的读懂一本书》进行细读。
+昨天无意中在一个公共号发现了一则文章，写的是作者通读《如何高效读懂一本书》后的心得体会，实则为读书笔记，读后感觉受益匪浅，于是找来秋叶的这本《如何高效读懂一本书》进行细读。
 <!-- more -->
 ## 怎样读书
 - **读书的第一个误区就是“怎样才算读完一本书？”**
@@ -106,12 +106,12 @@ tags: 阅读
 “专注、极致、口碑、快”对于职场人实现升职加薪同样具有借鉴意义。
 
 ## 紧急重要程度模型
-![紧急重要程度模型](/img/如何高效的读懂一本书/紧急重要程度模型.png)
+![紧急重要程度模型](http://7xrc03.com1.z0.glb.clouddn.com/%E5%A6%82%E4%BD%95%E9%AB%98%E6%95%88%E8%AF%BB%E6%87%82%E4%B8%80%E6%9C%AC%E4%B9%A6-%E7%B4%A7%E6%80%A5%E9%87%8D%E8%A6%81%E7%A8%8B%E5%BA%A6%E6%A8%A1%E5%9E%8B.png)
 - 写下明天/未来一周/未来一个月/未来一年的主要事情清单，并按照紧急重要程度模型归类，想好应对策略并落实到工作计划中。
 - 你对未来设想越细致，你就越可能过上你预想的生活，还要付诸于行动。
 
 ## 波士顿矩阵分析法
-![波士顿矩阵分析法](/img/如何高效的读懂一本书/波士顿矩阵分析法.png)
+![波士顿矩阵分析法](http://7xrc03.com1.z0.glb.clouddn.com/%E5%A6%82%E4%BD%95%E9%AB%98%E6%95%88%E8%AF%BB%E6%87%82%E4%B8%80%E6%9C%AC%E4%B9%A6-%E6%B3%A2%E5%A3%AB%E9%A1%BF%E7%9F%A9%E9%98%B5%E5%88%86%E6%9E%90%E6%B3%95.png)
 决定产品价值的基本因素有两个：市场份额和市场增长潜力，依据这两个维度，波士顿矩阵将企业的产品分为四种：
 - **金牛产品**
 市场占有率高，但是增长缓慢的产品；
@@ -223,3 +223,30 @@ MORS法则：
 - 压力往往是因为你坚持了很久，却没有进展造成的。所以我每次都会设定一个小阶段目标，看到目标被我拿下，压力就变成了一定要一鼓作气拿下的决心了。
 
 ## 本书收获
+看完本书，自己需要在以下几个方面付诸于行动：
+- 使用通读法和树读法完成对PHP和Mysql基本知识框架的搭建。
+PHP相关书籍：
+ 《PHP程序设计》(第2版)  --PHP语法和入门最好的书
+ 《PHP5权威编程》  --PHP入门后升级书
+ 《深入PHP：面向对象、模式与实践》(第3版) 
+ 《高性能PHP应用开发》 --了解一些基本简单的PHP优化
+ 《PHP核心技术与最佳实践》 --了解很多PHP高级技术和延伸技术
+ 《Extending and Embedding PHP》--PHP内核介绍和扩展开发最好的书！
+MySQL相关书籍：
+ 《MySQL必知必会》  --极好的MySQL语法参考书
+ 《MySQL 5 权威指南》（第3版） --MySQL综合全面使用书籍，适合入门
+ 《高性能MySQL》（第2版）  --适合DBA和开发的经典书籍！推荐！
+ 《深入理解MySQL核心技术》  --初窥MySQL内部工作原理
+ 《MySQL技术内幕：InnoDB存储引擎》 --目前深入分析InnoDB引擎最好的书
+ 《MySQL性能调优与架构设计》 --关于很多架构和优化配置
+ 《深入浅出MySQL——数据库开发、优化与管理维护》 --很多实用的MySQL技巧
+ 《高可用MySQL：构建健壮的数据中心》 --DBA和架构理解有兴趣可以读
+- 每年、每月、每周定下计划的同时，要列出主要事情清单，并依据紧急重要程度模型归类，想好策略并落实到计划中；
+- 平时多鼓励同事，遇到问题多提出改进的建议；
+- 锻炼快速决判力
+ 沟通之前先把自己想问的问题写下来；
+ 尝试自己先用准确的语言表达自己的想法，然后再去沟通。
+- 碎片化时间管理
+ 做一张碎片化时间用途与生活情境的关联表；
+ 仔细考虑每周/天的工作，哪些可以用碎片化时间完成；
+- 保持有规律的生活！
