--- a/source/_posts/2016-03-19-《沟通的艺术》读书笔记.md
+++ b/source/_posts/2016-03-19-《沟通的艺术》读书笔记.md
@@ -16,7 +16,8 @@ tags: 阅读
 心得：如果你做任何事别人都对你不屑一顾，说明你已经在他人心里失去了基本的尊重和认可，所以在与他人相处时，要多为他人着想，学会认可他人。
 - **建设人际关系的四个关键：待人诚实守信、善于给予，舍得给予、注意倾听，体谅他人、用心维护，勤加浇灌。**
 心得：诚实守信是基础，也是基本的道德底线；人不能一味的向他人索取，而不予以回报。赠人玫瑰，手留余香就是这个道理；倾听是一门艺术；许多友谊败给了时间和距离，如果不勤加联系，就会逐渐变成陌生人。
-- 学会欣赏别人，会增进双方的关系。
-- 如果你打不败他们，或者打败他们也没有好处。那么就和他们合作 	--拿破仑
-- 人与人之间应该相互给个台阶下，凡事要替别人多想想。
+- **学会欣赏别人，会增进双方的关系。**
+不要乱给别人贴标签，要学会多看别人的长处，借鉴别人优秀的方面。
+- **如果你打不败他们，或者打败他们也没有好处。那么就和他们合作 	--拿破仑**
+- **人与人之间应该相互给个台阶下，凡事要替别人多想想。** 
 - 获得成功的首要条件和最大秘密，是把精力和资历完全集中于所干的事
