--- a/source/img/XMind/知识总结附件/面向对象知识总结.md
+++ b/source/img/XMind/知识总结附件/面向对象知识总结.md
@@ -43,6 +43,66 @@ typedef struct _zend_object {
 } zend_object;
 ```
 ce是存储该对象的类结构，在对象初始化时保存了类的入口；properties是一个HashTable，用来存放对象的属性；guards用来阻止递归调用。
+![对象的组成](对象的组成.png)
+
+### 魔术方法
+PHP中以两个下划线'__'开头、具有特殊作用的一些方法叫魔术方法。
+ **__get和__set**：
+作用：访问和设置类中的私有属性。
+示例：
+```php
+class People {
+	private $name;
+	//private static $sex;
+	//const AGE = 19;
+	
+	public function say() {
+		//echo "I am ".$this->name.", my age is ".self::AGE;
+		echo "I am $this->name";
+	}
+}
+
+$man = new People();
+$man->name = 1;
+//echo "Jim age is ".$jim::AGE."\n";
+$man->say();
+```
+在没有定义__set方法时直接在类外部访问类私有属性，会产生错误：`PHP Fatal error:  Cannot access private property People::$name`，一般只能通过在类中定义一个public方法，然后在类外调用这个公开的方法实现对私有属性读写。现在可以通过__set和__get方法实现在类外部对私有属性的读写操作。
+```php
+class People {
+	private $name;	
+	
+	public function __get($name) {
+		if(!isset($this->name)) {			
+			$this->name = 'yuri';
+		}
+		return $this->name;
+	}
+	public function __set($name, $value) {		
+		$this->$name = $value;
+	}
+	public function say() {		
+		echo "I am ".$this->name;
+	}
+}
+
+$man = new People();
+echo $man->name."\n";
+$man->name = 'xyw';
+$man->say();
+```
+注：类中定义的方法默认修饰符为public，即`public function __get($name)`等价于`function __get($name)`
+ **__call和__callStatic**：
+作用：
+
+ **__toString**：
+作用：输出对象字符串信息。
+
+### 静态属性和静态方法
+[php面向对象中static静态属性和静态方法的调用](http://www.jb51.net/article/60871.htm)
+[php中静态属性静态方法的用法](http://blog.sina.com.cn/s/blog_6f49a3c30100p43t.html)
+### 类常量
+[php类常量用法实例分析](http://www.jb51.net/article/69230.htm)
 
 [1] [PHP变量在内存中的表示](http://gywbd.github.io/posts/2015/4/php-variable-in-memory.html)
 [2] [PHP内核探索：对象](http://www.nowamagic.net/librarys/veda/detail/1521)
