--- a/source/img/XMind/知识总结附件/面向对象知识总结.md
+++ b/source/img/XMind/知识总结附件/面向对象知识总结.md
@@ -100,6 +100,116 @@ $man->say();
 
 ### 静态属性和静态方法
 
+<table class="table table-bordered table-striped table-condensed">
+   <tr>      
+     <th colspan="5" bgcolor="F5F5F5" style="font-size:15px; padding:5px">静态属性和静态方法</th>     
+   </tr>
+   <tr>
+      <td width="20%" style="text-align:center; font-weight:bold">调用对象</td>
+      <td width="20%" style="text-align:center; font-weight:bold">静态属性</td>
+      <td width="20%" style="text-align:center; font-weight:bold">非静态属性</td>
+      <td width="20%" style="text-align:center; font-weight:bold">静态方法</td>
+	  <td width="20%" style="text-align:center; font-weight:bold">非静态方法</td>
+   </tr>
+   <tr>
+      <td rowspan="1" style="text-align:center">对象</td>
+      <td width="20%" style="text-align:center">self::</td>
+      <td width="20%" style="text-align:center">$this-></td>
+      <td width="20%" style="text-align:center">self::或者$this-></td>
+	  <td width="20%" style="text-align:center">$this-></td>
+   </tr>
+   <tr>
+      <td rowspan="1" style="text-align:center">类</td>
+      <td width="20%" style="text-align:center">self::</td>
+      <td width="20%" style="text-align:center">—</td>
+      <td width="20%" style="text-align:center">self::</td>
+	  <td width="20%" style="text-align:center">—</td>
+   </tr>
+   <tr>
+      <td rowspan="1" style="text-align:center">静态方法</td>
+      <td width="20%" style="text-align:center">self::</td>
+      <td width="20%" style="text-align:center">—</td>
+      <td width="20%" style="text-align:center">self::</td>
+	  <td width="20%" style="text-align:center">—</td>
+   </tr>
+   <tr>
+      <td rowspan="1" style="text-align:center">非静态方法</td>
+      <td width="20%" style="text-align:center">self::</td>
+      <td width="20%" style="text-align:center">$this-></td>
+      <td width="20%" style="text-align:center">self::或者$this-></td>
+	  <td width="20%" style="text-align:center">$this-></td>
+   </tr>   
+</table>
+
+```php
+class People {	
+	static public $sex = 'woman';		//静态属性
+	public $name = 'yuri';				//非静态属性
+		
+	//非静态方法say
+	public function say() {		
+		echo "I am ".$this->name."\n";			//普通方法调用非静态属性
+	}
+	
+	//静态方法sex
+	public static function sex() {
+		echo "My gender is ".self::$sex."\n";	//静态方法调用静态属性(注意：不要写成self::sex)
+	}
+	
+	//非静态方法info
+	public function info() {
+		echo "I am ".$this->name."\n";			//普通方法调用非静态属性
+		echo "My gender is ".self::$sex."\n";	//普通方法调用静态属性(注意：不要写成self::sex)
+		$this->say();							//普通方法调用普通方法
+		self::sex();							//普通方法调用静态方法
+		$this->sex();							//普通方法调用静态方法
+		
+	}
+	
+	//静态方法walk
+	public static function walk() {
+		self::sex();							//静态方法调用静态方法
+		echo "I can walk \n";
+	}
+}
+
+echo People::$sex."\n";		//类调用静态属性(注意：不要写成People::sex)
+People::sex();				//类调用静态方法
+People::walk();				//类调用静态方法
+
+
+$man = new People();
+echo $man::$sex."\n";		//对象调用静态属性(注意：不要写成$man::sex)
+echo $man->name."\n";		//对象调用非静态属性
+
+$man::sex();				//对象调用静态方法
+$man->sex();				//对象调用静态方法
+$man::walk();				//对象调用静态方法
+
+$man->say();				//对象调用非静态方法
+$man->info();				//对象调用非静态方法
+```
+输出结果：
+```
+woman
+My gender is woman
+My gender is woman
+I can walk
+woman
+yuri
+My gender is woman
+My gender is woman
+My gender is woman
+I can walk
+I am yuri
+I am yuri
+My gender is woman
+I am yuri
+My gender is woman
+My gender is woman
+请按任意键继续. . .
+```
+
 [php面向对象中static静态属性和静态方法的调用](http://www.jb51.net/article/60871.htm)
 [php中静态属性静态方法的用法](http://blog.sina.com.cn/s/blog_6f49a3c30100p43t.html)
 ### 类常量
