--- a/source/img/XMind/知识总结附件/面向对象知识总结.md
+++ b/source/img/XMind/知识总结附件/面向对象知识总结.md
@@ -93,10 +93,99 @@ $man->say();
 ```
 注：类中定义的方法默认修饰符为public，即`public function __get($name)`等价于`function __get($name)`
  **__call和__callStatic**：
-作用：
+作用：防止调用不存在的方法而出错。
+__call：防止调用的普通方法不存在而出错；
+__callStatic：防止调用的静态方法不存在而出错。
+举例：
+```php
+class People {	
+	const AGE = 19;
+	const SEX = 'man';
+		
+	//非静态方法say
+	public function say() {		
+		echo "I am ".self::AGE." years old \n";			//静态方法调用类常量
+	}
+	
+	//静态方法sex
+	public static function sex() {
+		echo "I am ".self::SEX."\n";	//静态方法调用类常量
+	}	
+	
+	public function __call($name, $arguments) {
+		switch(count($arguments)) {
+			case 2:
+				echo $arguments[0] * $arguments[1]."\n";
+				break;
+			case 3:
+				echo array_sum($arguments)."\n";
+				break;
+			default:
+				echo "arguments error ！ function name = $name\n";
+				break;
+		}
+	}
+	
+	public static function __callStatic($name, $arguments) {
+		switch(count($arguments)) {
+			case 2:
+				echo $arguments[0] * $arguments[1]."\n";
+				break;
+			case 3:
+				echo array_sum($arguments)."\n";
+				break;
+			default:
+				echo "arguments error ！ function name = $name\n";
+				break;
+		}
+	}
+}
+
+$man = new People();
+$man->say();
+$man->tell(1, 2);
+$man->tell(1, 2, 4);
+$man->tell(1, 2, 4, 9);
+
+$man::sex();
+$man::walk(1, 2);
+$man::walk(1, 2, 4);
+$man::walk(1, 2, 4, 9);
+```
+输出结果：
+```
+I am 19 years old
+2
+7
+arguments error ！ function name = tell
+I am man
+2
+7
+arguments error ！ function name = walk
+请按任意键继续. . .
+
+```
 
  **__toString**：
 作用：输出对象字符串信息。
+直接echo一个对象会产生语法错误：`PHP Catchable fatal error:  Object of class People could not be converted to string`，而如果在类中实现了__toString()方法后就可以输出对象，且输出的内容在__toString函数中定制。
+```php
+class People {	
+	private $name = 'yuri';
+	private $age = '20';
+	
+	public function __toString() {
+		return "Name = $this->name, age = $this->age \n";
+	}
+}
+$man = new People();
+echo $man;
+```
+输出结果：
+```
+Name = yuri, age = 20
+请按任意键继续. . .
+```
 
 ### 静态属性和静态方法
 
@@ -209,11 +298,55 @@ My gender is woman
 My gender is woman
 请按任意键继续. . .
 ```
+总结：类和静态方法只能通过self::调用静态属性和静态方法；
+对象和非静态方法可以调用类的静态属性和静态方法，以及非静态属性和普通方法。
 
-[php面向对象中static静态属性和静态方法的调用](http://www.jb51.net/article/60871.htm)
-[php中静态属性静态方法的用法](http://blog.sina.com.cn/s/blog_6f49a3c30100p43t.html)
 ### 类常量
-[php类常量用法实例分析](http://www.jb51.net/article/69230.htm)
+ 类常量是个定值，始终保持不变，不能用public，protected，private，static修饰；
+ 类、对象(PHP 5.3.0后)、静态方法、非静态方法均可以调用类常量，调用方式为self::
+ PHP5.3.0起，可以用一个变量来动态调用类。但该变量的值不能为关键字（如self，parent或static）
+```php
+class People {	
+	const AGE = 19;
+	const SEX = 'man';
+		
+	//非静态方法say
+	public function say() {		
+		echo "I am ".self::AGE." years old \n";			//静态方法调用类常量
+	}
+	
+	//静态方法sex
+	public static function sex() {
+		echo "I am ".self::SEX."\n";	//静态方法调用类常量
+	}	
+}
+
+echo People::AGE."\n";		//类调用类常量
+People::sex();				//类调用静态方法
+
+
+$man = new People();
+echo $man::AGE."\n";		//对象调用类常量（PHP 5.3.0后）
+
+$man->say();				//对象调用非静态方法
+$man::sex();				//对象调用静态方法
+
+$object = 'People';			//PHP 5.3.0后
+echo $object::AGE."\n";
+```
+输出结果：
+```
+19
+I am man
+19
+I am 19 years old
+I am man
+19
+请按任意键继续. . .
+```
+
 
 [1] [PHP变量在内存中的表示](http://gywbd.github.io/posts/2015/4/php-variable-in-memory.html)
 [2] [PHP内核探索：对象](http://www.nowamagic.net/librarys/veda/detail/1521)
+[3] [php面向对象中static静态属性和静态方法的调用](http://www.jb51.net/article/60871.htm)
+[4] [php中静态属性静态方法的用法](http://blog.sina.com.cn/s/blog_6f49a3c30100p43t.html)
