--- a/source/img/XMind/知识总结附件/面向对象知识总结.md
+++ b/source/img/XMind/知识总结附件/面向对象知识总结.md
@@ -186,6 +186,24 @@ echo $man;
 Name = yuri, age = 20
 请按任意键继续. . .
 ```
+ **__invoke**：
+作用：以调用函数的方式调用一个对象时，__invoke方法会被自动调用。
+```php
+class People {	
+	private $name = 'yuri';
+	private $age = '20';
+	
+	public function __toString() {
+		return "Name = $this->name, age = $this->age \n";
+	}
+	
+	public function __invoke(){
+		echo $this->name."\n";
+	}
+}
+$man = new People();
+$man();		//触发__invoke方法
+```
 
 ### 静态属性和静态方法
 
@@ -345,6 +363,128 @@ I am man
 请按任意键继续. . .
 ```
 
+### 反射
+在PHP运行状态中动态提取出关于类、方法、属性、参数等详细信息。
+```php
+class People {	
+	private $name = 'yuri';
+	private $age = '20';
+	public static $sex = 'woman';		//静态属性
+	
+	public function __toString() {
+		return "Name = $this->name, age = $this->age \n";
+	}
+	
+	public function __invoke(){
+		echo $this->name."\n";
+	}
+	
+	//非静态方法say
+	public function say() {		
+		echo "I am ".$this->name."\n";			
+	}
+	
+	//静态方法sex
+	public static function sex() {
+		echo "My gender is ".self::$sex."\n";	
+	}
+	
+	
+}
+$man = new People();
+$reflect = new ReflectionObject($man);
+$props = $reflect->getProperties();			//获取类属性
+print_r($props);
+```
+print_r($props);输出的是一个ReflectionProperty的对象数组，可以使用getName方法输出ReflectionProperty对象的属性名称。
+```
+Array
+(
+    [0] => ReflectionProperty Object
+        (
+            [name] => name
+            [class] => People
+        )
+
+    [1] => ReflectionProperty Object
+        (
+            [name] => age
+            [class] => People
+        )
+
+    [2] => ReflectionProperty Object
+        (
+            [name] => sex
+            [class] => People
+        )
+
+)
+请按任意键继续. . .
+```
+```php
+class People {	
+	private $name = 'yuri';
+	private $age = '20';
+	public static $sex = 'woman';		//静态属性
+	
+	public function __toString() {
+		return "Name = $this->name, age = $this->age \n";
+	}
+	
+	public function __invoke(){
+		echo $this->name."\n";
+	}
+	
+	//非静态方法say
+	public function say() {		
+		echo "I am ".$this->name."\n";			
+	}
+	
+	//静态方法sex
+	public static function sex() {
+		echo "My gender is ".self::$sex."\n";	
+	}
+	
+	
+}
+$man = new People();
+$reflect = new ReflectionObject($man);
+$props = $reflect->getProperties();			//获取类属性
+//print_r($props);
+echo "---properties list---\n";
+if(!empty($props)) {
+	foreach($props as $v) {
+		echo $v->getName()."\n";			//打印属性名称列表
+	}
+}
+$methods = $reflect->getMethods();
+//print_r($methods);
+echo "----methods  list----\n";
+if(!empty($methods)) {
+	foreach($methods as $v) {
+		echo $v->getName()."\n";			//打印方法名称列表
+	}
+}
+/*
+//举一反三，可以查看ReflectionObject反射类的属性和方法列表
+$ref = new ReflectionObject($reflect);
+$ref_meth = $ref->getMethods();
+print_r($ref_meth);
+*/
+```
+输出结果：
+```
+---properties list---
+name
+age
+sex
+----methods  list----
+__toString
+__invoke
+say
+sex
+请按任意键继续. . .
+```
 
 [1] [PHP变量在内存中的表示](http://gywbd.github.io/posts/2015/4/php-variable-in-memory.html)
 [2] [PHP内核探索：对象](http://www.nowamagic.net/librarys/veda/detail/1521)
