--- a/source/img/XMind/知识总结附件/面向对象知识总结.md
+++ b/source/img/XMind/知识总结附件/面向对象知识总结.md
@@ -486,6 +486,21 @@ sex
 请按任意键继续. . .
 ```
 
+### 异常与错误
+ 使用场景：
+- 对程序的悲观预测，认为自己的代码无法处理各种可预见、不可预见的情况。
+- 保护业务数据的一致性。
+异常处理机制可以把每件事当做事务处理。用try包裹可能出现异常的代码段，然后用catch捕捉异常，并进行一定的补救措施，保证业务数据的一致性。
+
+ 作用：
+使用try...catch处理的好处就是：可以把异常造成的逻辑中断破坏降低到最小范围内，并且经过补救后不会影响业务逻辑的完整性；乱抛异常和只抛不捕获，或捕获而不补救，会导致数据混乱。
+
+ 错误级别：
+deprecated、notice、warning、fetal error、parse error，错误级别由低到高。
+
+技巧：在正式环境部署代码时使用`error_reporting(0); `可以关闭错误提示，防止泄露敏感信息。
+
+### 参考资料
 [1] [PHP变量在内存中的表示](http://gywbd.github.io/posts/2015/4/php-variable-in-memory.html)
 [2] [PHP内核探索：对象](http://www.nowamagic.net/librarys/veda/detail/1521)
 [3] [php面向对象中static静态属性和静态方法的调用](http://www.jb51.net/article/60871.htm)
