--- a/source/_posts/2016-01-06-Hexo搭建个人博客（四）.md
+++ b/source/_posts/2016-01-06-Hexo搭建个人博客（四）.md
@@ -309,16 +309,38 @@ hexo d
 
 - 在其他电脑上使用
 
-[1] 拉取分支：`git clone git@github.com:xuyuri/xuyuri.github.io.git`（默认为hexo）
-[2] 配置环境：
+[1] 安装Node.js和Git
+分别到[Node.js](https://nodejs.org/en/)和[Git](http://git-scm.com/download/)官网下载最新版本，并安装。
+
+[2] 拉取分支：`git clone git@github.com:xuyuri/xuyuri.github.io.git`（默认为hexo）
+注意：如果提示
 ```
-npm install hexo
+Permission denied (publickey).
+fatal: Could not read from remote repository.
+
+Please make sure you have the correct access rights
+and the repository exists.
+```
+需要根据[Hexo搭建个人博客（一）](http://yurixu.com/blog/2016/01/03/Hexo%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%EF%BC%88%E4%B8%80%EF%BC%89/)中**设置SSH公钥**部分设置SSH公钥。
+进入到新生成的文件夹xuyuri.github.io.git下执行以下操作。
+[1] 配置环境：
+```
+npm install hexo@3.1.1 --save
 npm install
 npm install hexo-deployer-git --save
 ```
 注意：一定不要使用hexo init指令！
+*---编者添加于2016年6月28日---*
+注意：此处安装hexo时指定了版本3.1.1，因为最新3.2.0版本的hexo安装完成后执行hexo -g会报错，因此使用3.1.1版本的hexo。如果你已经安装了3.2.0的版本，想要降版到3.1.1，执行如下操作：
+```
+npm uninstall hexo
+npm install hexo@3.1.1 --save
+npm install
+```
+*---编者添加于2016年6月28日---*
 安装完成后就可以进行博客的修改、新建。
 如果在不同电脑上同时有博客的源码目录，每次写/修改博客前要先从分支上拉取最新的代码，然后再在本地目录下进行操作。
+
 ```
 git status
 git pull
