--- a/source/_posts/2016-06-28-漫谈微信支付.md
+++ b/source/_posts/2016-06-28-漫谈微信支付.md
@@ -7,7 +7,35 @@ description: 漫谈微信支付
 ---
 
 ![](http://7xrc03.com1.z0.glb.clouddn.com/%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98.jpeg)
+本文对微信支付的应用场景、支付模式、准备工作等进行简要概括。
 <!--more-->
+
+## 概述
+微信支付目前在生活中应用的越来越广泛，目前微信支付的应用模式有刷卡支付、公共号支付、扫码支付以及APP支付，每种支付模式都有不同的应用场景与之对应。
+
+## 支付模式
+直接引用微信官方文档中对微信四种支付模式的说明：
+
+### 刷卡支付
+刷卡支付是用户展示微信钱包内的“刷卡条码/二维码”给商户系统扫描后直接完成支付的模式。主要应用线下面对面收银的场景。
+
+### 扫码支付
+扫码支付是商户系统按微信支付协议生成支付二维码，用户再用微信“扫一扫”完成支付的模式。该模式适用于PC网站支付、实体店单品或订单支付、媒体广告支付等场景。
+
+### 公共号支付
+公众号支付是用户在微信中打开商户的H5页面，商户在H5页面通过调用微信支付提供的JSAPI接口调起微信支付模块完成支付。应用场景有：
+◆ 用户在微信公众账号内进入商家公众号，打开某个主页面，完成支付
+◆ 用户的好友在朋友圈、聊天窗口等分享商家页面连接，用户点击链接打开商家页面，完成支付
+◆ 将商户页面转换成二维码，用户扫描二维码后在微信浏览器中打开页面后完成支付。
+
+### APP支付
+APP支付又称移动端支付，是商户通过在移动端应用APP中集成开放SDK调起微信支付模块完成支付的模式。
+
+本系列文章主要介绍后三种支付模式，分别介绍三种不同支付模式的实现以及汇总实现过程中可能遇到问题。
+
+## 前期准备
+使用微信支付前需要进行接入，商户根据实际需求可以申请接入以上介绍的四种不同支付模式，其中APP支付模式需要在[微信开放平台](https://open.weixin.qq.com/)申请，扫码支付和公共号支付需要在[微信公共平台](http://mp.weixin.qq.com)申请。申请成功后，微信会将微信支付开发相关的账号信息发送至申请邮箱中，包括：
+![前期准备](/img/微信支付系列/前期准备.png)
 
 
 ---- 完结 ----
