--- a/source/_posts/2016-06-28-漫谈微信支付.md
+++ b/source/_posts/2016-06-28-漫谈微信支付.md
@@ -450,7 +450,27 @@ WxpayApi类的notify方法为：
 ```
 首先分析方法`notify`：`$GLOBALS['HTTP_RAW_POST_DATA'];`获取到微信服务器返回的XML结果，通过WxPayResults的Init方法得到返回结果数组，以参数的方式传递给call_user_func方法。如果使用类方法作为call_user_func的参数，需要使用：array($className, $functionName)的方式传递参数，因此`$result = WxpayApi::notify(array($this, 'NotifyCallBack'), $msg);`的含义为：将微信返回的结果数组作为参数传递给函数NotifyCallBack，$result为NotifyCallBack方法的返回结果。
 在NotifyCallBack方法中调用NotifyProcess，该方法需要用户在继承WxPayNotify类时进行重写（后续微信支付实现时需要重写该方法）。
-`ReplyNotify`直接输出回调处理完成后的XML数据。
+```php
+	/**
+	 * 
+	 * 回复通知
+	 * @param bool $needSign 是否需要签名输出
+	 */
+	final private function ReplyNotify($needSign = true)
+	{
+		//如果需要签名
+		if($needSign == true && 
+		 //$this->GetReturn_code($return_code) == "SUCCESS")
+         //又现一处SDK错误，$return_code多余
+         $this->GetReturn_code() == "SUCCESS")
+		{
+			$this->SetSign();
+		}
+		WxpayApi::replyNotify($this->ToXml());
+	}
+```
+`ReplyNotify`直接输出回调处理完成后的XML数据。因为是回调系统，直接输出XML后，微信后台可以获取到该输出内容，所以不需要开发者主动将结果发送给微信后台。
+此处官方SDK又出现一处错误：`GetReturn_code`方法不需要传递参数，应该把$return_code删除。
 
 至此微信支付相关的准备工作已介绍完毕，在下一节[漫谈微信支付-扫码支付]()将会介绍扫码支付的实现过程。
 ---- 完结 ----
