--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -18,5 +18,21 @@ description: 漫谈微信支付-扫码支付
 - 微信客户端收到支付成功通知，微信后台将支付结果回调给商户。
 
 ## 支付模式
-
+根据应用场景的不同，微信提供了两种扫码支付模式：
+**模式一：**
+商户将productid（可定义为产品标识或订单号）作为参数根据微信支付规则事先生成固定的二维码，商户可将此二维码打印张贴，方便用户线下扫码支付。
+用户扫码后，微信支付系统会将用户openid和商户定义的productid返回给商户在微信公共平台配置的回调地址，商户根据productid生成微信支付交易，最后微信支付系统发起用户支付流程。
+**模式二：**
+商户后台主动发起调用微信支付[统一下单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_1)API接口生成预付交易，并将接口返回的短连接生成二维码，用户扫码后输入密码完成支付交易。
 ## 实现过程
+**模式一：**
+- 准备工作：
+模式一需要在微信公共平台配置回调地址：微信公共平台->微信支付->开发配置
+![](/img/微信支付系列/扫码支付-回调.png)
+- 开发流程：
+- 总结：
+**模式二：**
+- 开发流程：
+- 总结：
+
+## 支付模式区别
